# threatwave

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/samples/: otx_subscribed.json
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  errors.ts  types.ts
frontend/src/components/: GraphView.tsx  NarrativePanel.tsx  NodeDetailPanel.tsx  StatusBanner.tsx
frontend/src/graph/: style.ts
frontend/src/hooks/: useGraph.ts  useNarrative.ts
src/threatweave/: cli.py  config.py  ingest.py  ingest_runner.py
src/threatweave/api/: __init__.py  app.py  routes.py
src/threatweave/connectors/: __init__.py  base.py  document.py  otx.py
src/threatweave/correlation/: __init__.py  correlate.py  similar.py
src/threatweave/graph/: __init__.py  base.py  memory.py  neo4j_store.py
src/threatweave/llm/: __init__.py  base.py  cost.py  factory.py  narrative.py  ollama_provider.py  openai_provider.py
src/threatweave/models/: __init__.py  graph.py  normalize.py
src/threatweave/vector/: __init__.py  base.py  factory.py  memory.py  pgvector_store.py
tests/: conftest.py  test_api.py  test_api_expand.py  test_api_frontend.py  test_api_ingest_status.py  test_api_narrative.py  test_cli.py  test_config.py  test_correlate.py  test_graph_store.py  test_ingest_cost.py  test_ingest_runner.py  test_narrative.py  test_openai_provider.py  test_otx_connector.py  test_pgvector_store.py
