[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threatweave"
version = "0.1.0"
description = "Threat intelligence knowledge graph with deterministic correlation and reserved AI enrichment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dany" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "neo4j>=5.20",
    "httpx>=0.27",
    "openai>=1.40",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
]

[project.scripts]
threatweave = "threatweave.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/threatweave"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade.
select = ["E", "F", "I", "B", "C4", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
